`15JCT4WOFESOJP GANREOJP GFCAWNO
IM GOING TO LOOSE IT

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <section class="left">
 
             <div class="certificate" id="certificate">
-                <span id="nameOutput">testname</span>
+
+                         <div class="typename">
+                            <span id="nameOutput"></span>
+                          </div>
                 <span id="info"></span>
             </div>
 
@@ -23,6 +26,7 @@
         <divc class="">
         <section class="right">
 
+<div>
             <form action="" id="myForm">
     
                 <input type="text" name="name" id="name" placeholder="Name">
